# Vulkan-Sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
src/: CMakeLists.txt  helloTriangle.cc  helloTriangle.hh  main.cc
src/rendering/: particles.cc  particles.hh  uniformBuffer.cc  uniformBuffer.hh  vertex.cc  vertex.hh
src/shaders/: compile.bat  frag.spv  vert.spv
